--- a/_includes/github-head.html
+++ b/_includes/github-head.html
@@ -17,4 +17,6 @@
     <link rel="bookmark" href="http://imwr.github.io/resources/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="http://imwr.github.io/resources/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="http://imwr.github.io/resources/css/github-example.css">
+    <link type="text/css" rel="stylesheet" href="http://imwr.github.io/resources/syntax/shCoreDefault.css"/>
 </head>
