--- a/_layouts/github-web.html
+++ b/_layouts/github-web.html
@@ -2,7 +2,7 @@
 layout: default
 notes: active
 ---
-{% include header.html %}
+{% include github-head.html %}
 {{ content }}
 {% include github-scripts.html %}
 {% include disqus.html %}
