--- a/_includes/github-header.html
+++ b/_includes/github-header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="main-inner">
-        <a href="https://tt-cc.cn/{{ page.author }}" target="_blank" class="button">
+        <a href="https://tt-cc.cn/{{ page.name }}" target="_blank" class="button">
             <small>View project on</small>
             GitHub</a>
 
