--- a/_layouts/github-web.html
+++ b/_layouts/github-web.html
@@ -1,8 +1,12 @@
----
-layout: default
-notes: active
----
+<!DOCTYPE html>
+<html>
 {% include github-head.html %}
+<body>
+{% include github-header.html %}
 {{ content }}
 {% include github-scripts.html %}
 {% include disqus.html %}
+{% include footer.html %}
+</body>
+</html>
+
