--- a/_includes/github-head.html
+++ b/_includes/github-head.html
@@ -15,4 +15,5 @@
     <link rel="stylesheet" type="text/css" href="http://imwr.github.io/resources/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="http://imwr.github.io/resources/css/github-example.css">
     <link type="text/css" rel="stylesheet" href="http://imwr.github.io/resources/syntax/shCoreDefault.css"/>
+    <script type="text/javascript" src="http://imwr.github.io/resources/js/jquery-1.11.3.min.js"></script>
 </head>
