--- a/_includes/sidebar-post-category.html
+++ b/_includes/sidebar-post-category.html
@@ -3,8 +3,10 @@
     <ul class="list-group">
         {% for category in site.categories %}
         <li class="list-group-item">
+            <a href="/categories#{{ category | first }}">
             {{ category | first }}
             <span class="badge">{{ category[1].size }}</span>
+            </a>
         </li>
         {% endfor %}
     </ul>
