--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,9 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/common.css">
 
+    <!-- Syntax CSS -->
+    <link rel="stylesheet" href="/assets/css/syntax.css">
+
     <!-- CSS set in page -->
     {% for css in page.css %}
     <link rel="stylesheet" href="/assets/css/{{css}}">
