--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -10,12 +10,12 @@
                 <span class="octicon octicon-calendar"></span> {{ page.date | date: "%Y/%m/%d" }}
                 {% endif %}
                 {% if page.category %} |
-                 Posted in {{ page.category }}
+                 Posted in <a href="/category/{{ page.category }}">{{ page.category }}</a>
                 {% endif %}
                 {% if page.tags %} |
                  <span class="glyphicon glyphicon-tag small"></span>
                 {% for tag in page.tags %}
-                  <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">
+                  <a href="/tag/{{ tag | slugify }}" class="post-tag">
                       {{ tag }}
                   </a>
                 {% endfor %}
