--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,15 +4,11 @@
 
         <div class="copyright pull-left">
             <!-- Please keep this line to let others know where this theme comes from. Thank you :D -->
-             <a href="/">{{ site.name }}</a>
+            <a href="/">{{ site.name }}</a>
         </div>
 
-        <a href="https://github.com/imwr" target="_blank" aria-label="view source code">
-            <span class="mega-octicon octicon-mark-github" title="GitHub"></span>
-        </a>
-
         <div class="pull-right">
-            <a href="javascript:window.scrollTo(0,0)">TOP</a>
+            <a href="javascript:$('body').animate({scrollTop: 0}, 200);">TOP</a>
         </div>
 
     </div>
@@ -27,23 +23,31 @@
     <script src="/assets/js/{{javascript}}"></script>
     {% endfor %}
 
+    <script src="/components/search-jekyll/jekyll-search.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript">
+        SimpleJekyllSearch({
+            searchInput: document.getElementById('search-query'),
+            resultsContainer: document.getElementById('search-results'),
+            searchResultTemplate: '<a href="{url}">{title}[{category}]</a>',
+            json: '/components/search-jekyll/index.json'
+        })
+    </script>
+
     <!-- Google Analytics -->
-    <div style="display:none">
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-            ga('create', '{{site.google_tracking_id}}', 'auto');
-            ga('send', 'pageview');
-        </script>
-    </div>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', '{{site.google_tracking_id}}', 'auto');
+        ga('send', 'pageview');
+    </script>
 
 </footer>
