--- a/_includes/sidebar-post-tag.html
+++ b/_includes/sidebar-post-tag.html
@@ -1,4 +1,4 @@
-<h3 class="sidebar-title">Blog Tags</h3>
+<h3 class="sidebar-title"> Tags</h3>
 <div id="blog-categories">
     <ul class="list-group">
         {% for tag in site.tags %}
