--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 css: ['sidebar-post-nav.css']
+menu: Blog
 ---
 {% include jumbotron.html %}
 <article class="post container" itemscope itemtype="http://schema.org/BlogPosting">
@@ -56,7 +57,6 @@ css: ['sidebar-post-nav.css']
         </div>
 
         <div class="col-md-4">
-            {% include sidebar-post-search.html %}
             {% include sidebar-post-nav.html %}
         </div>
 
