--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,6 +1,6 @@
 {% if paginator.total_pages > 1 %}
-<div class="text-xs-center">
-    <ul class="pagination pagination-sm">
+<div class="text-center">
+    <ul class="pagination">
         <li class="page-item{% unless paginator.previous_page %} disabled{% endunless %}">
             <a class="page-link" href="{% if paginator.previous_page == 1 %}/blog/{% else %}{{ paginator.previous_page_path }}{% endif %}" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
