--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,13 @@
 <footer class="container">
-
-    <div class="site-footer">
-
-        <div class="copyright pull-left">
-            <!-- Please keep this line to let others know where this theme comes from. Thank you :D -->
-            <a href="/">{{ site.name }}</a>
-        </div>
-
-        <div class="pull-right">
+    <hr/>
+    <ul class="nav nav-pills">
+        <li role="presentation"><a href="/">{{ site.name }}</a></li>
+        <li role="presentation"><a href="/about">About</a></li>
+        <li role="presentation"><a href="/sitemap.xml">Sitemap</a></li>
+        <li role="presentation" class="pull-right">
             <a href="javascript:$('body').animate({scrollTop: 0}, 200);">TOP</a>
-        </div>
-
-    </div>
+        </li>
+    </ul>
 
     <!-- Third-Party JS -->
     <script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>
@@ -22,16 +18,6 @@
     {% for javascript in page.javascript %}
     <script src="/assets/js/{{javascript}}"></script>
     {% endfor %}
-
-    <script src="/components/search-jekyll/jekyll-search.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript">
-        SimpleJekyllSearch({
-            searchInput: document.getElementById('search-query'),
-            resultsContainer: document.getElementById('search-results'),
-            searchResultTemplate: '<a href="{url}">{title}[{category}]</a>',
-            json: '/components/search-jekyll/index.json'
-        })
-    </script>
 
     <!-- Google Analytics -->
     <script>
