--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,39 @@
 <header class="site-header">
-    <div class="container" style="position: relative">
-        <a href="/" title="{{ site.name }}">
-            <img src="/favicon.ico"> {{ site.name }}
-        </a>
-        <a class="site-header-search">
-            <label for="search-query" class="glyphicon glyphicon-search"></label>
-            <input type="text" id="search-query" class="form-control search-query" name="q" placeholder="Search"
-                   autocomplete="off"/>
-            <div class="search-results" id="search-results"></div>
-        </a>
-        <nav class="site-header-nav" role="navigation">
-            {% for nav in site.navs %}
-            <a href="{{ nav.href }}"
-               class="{% if page.menu == nav.label %} selected {% endif %} site-header-nav-item hvr-underline-from-center"
-               target="{{ nav.target | default: _self }}"
-               title="{{ nav.label }}">
-                {{ nav.label }}
-            </a>
-            {% endfor %}
+    <div class="container">
+        <nav role="navigation" class="navbar navbar-default">
+            <div class="navbar-header">
+                <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="/" title="{{ site.name }}" class="navbar-brand" style="padding: 0">
+                    <img src="/favicon.ico">
+                </a>
+            </div>
+            <div id="navbarCollapse" class="collapse navbar-collapse">
+                {% if page.menu != 'search' %}
+                <form role="search" action="/search" class="navbar-form navbar-right">
+                    <input type="text" id="search-input" placeholder="Search" name="query"
+                           class="form-control search-query">
+                    <label for="search-input" class="glyphicon glyphicon-search search-query-icon" aria-hidden="true"
+                           href></label>
+                </form>
+                {% endif %}
+                <ul class="nav navbar-nav navbar-right">
+                    {% for nav in site.navs %}
+                    <li class="{% if page.menu == nav.label %} active {% endif %}">
+                        <a href="{{ nav.href }}"
+                           class="hvr-underline-from-center"
+                           target="{{ nav.target | default: _self }}"
+                           title="{{ nav.label }}">
+                            {{ nav.label }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </nav>
     </div>
 </header>
