--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,13 +1,12 @@
 <section class="jumbotron geopattern" data-pattern-id="{{ page.title }}">
     <div class="container">
-        <div id="jumbotron-meta-info">
-            <h1>{{ page.title }}</h1>
+        <h3>{{ page.title }}</h3>
             <span class="meta-info">
                 {% if page.subtitle %}
                     {{ page.subtitle }}
                 {% endif %}
                 {% if page.date %}
-                <span class="octicon octicon-calendar"></span> {{ page.date | date: "%Y/%m/%d" }}
+                <span class="glyphicon glyphicon-time"></span> {{ page.date | date: "%Y/%m/%d" }}
                 {% endif %}
                 {% if page.category %} |
                  Posted in <a href="/category/{{ page.category }}">{{ page.category }}</a>
@@ -21,15 +20,12 @@
                 {% endfor %}
                 {% endif %}
             </span>
-        </div>
     </div>
 </section>
 <script>
-    $(document).ready(function(){
-
-        $('.geopattern').each(function(){
+    $(document).ready(function () {
+        $('.geopattern').each(function () {
             $(this).geopattern($(this).data('pattern-id'));
         });
-
     });
 </script>
