--- a/_includes/sidebar-post-category.html
+++ b/_includes/sidebar-post-category.html
@@ -1,20 +1,11 @@
-<h3 class="sidebar-title"> Categories</h3>
-<div id="blog-categories">
-    <ul class="list-group">
-        {% for category in site.categories %}
-        <li class="list-group-item">
-            <a href="/category/{{ category[0] }}">
-            {{ category | first }}
-            <span class="badge pull-right">{{ category[1].size }}</span>
-            </a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-<script type="text/javascript">
-
-    $(document).ready(function(){
-        $("#blog-categories li").css('text-transform','capitalize')
-    });
-
-</script>
+<ul class="list-group">
+    <a href="#" class="list-group-item active">
+        Categories
+    </a>
+    {% for category in site.categories %}
+    <a class="list-group-item" href="/category/{{ category[0] }}">
+        {{ category | first }}
+        <span class="badge pull-right">{{ category[1].size }}</span>
+    </a>
+    {% endfor %}
+</ul>
