--- a/_includes/sidebar-post-tag.html
+++ b/_includes/sidebar-post-tag.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <a href="#" class="list-group-item active">
+    <a href="#" class="list-group-item disabled">
         Tags
     </a>
     {% for tag in site.tags %}
