--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 {% include jumbotron.html %}
-<article class="post container">
-
-    {{ content }}
-
-</article>
+<div class="container">
+    <div class="row">
+        {{ content }}
+    </div>
+</div>
