--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,7 @@ css: ['sidebar-post-nav.css']
 menu: Blog
 ---
 {% include jumbotron.html %}
-<article class="post container" itemscope itemtype="http://schema.org/BlogPosting">
-
+<article class="container">
     <div class="row">
         <ol class="breadcrumb">
             <li><a href="/">Home</a></li>
@@ -85,7 +84,5 @@ menu: Blog
         <div class="col-md-4">
             {% include sidebar-post-nav.html %}
         </div>
-
     </div>
-
 </article>
