--- a/_includes/sidebar-post-category.html
+++ b/_includes/sidebar-post-category.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <a href="#" class="list-group-item active">
+    <a href="#" class="list-group-item disabled">
         Categories
     </a>
     {% for category in site.categories %}
