--- a/_layouts/blog_by_category.html
+++ b/_layouts/blog_by_category.html
@@ -2,7 +2,7 @@
 layout: page
 menu: Blog
 ---
-<div class="col-md-8 row">
+<div class="col-md-8">
     <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
         <li><a href="/categories">categories</a></li>
