fixed some issues

--- a/_includes/github-footer.html
+++ b/_includes/github-footer.html
@@ -1,72 +1,4 @@
 <script type="text/javascript" src="{{site.url}}/resources/syntax/shCore.js"></script>
 <script type="text/javascript" src="{{site.url}}/resources/syntax/shBrushJScriptAndXml.js"></script>
 <script type="text/javascript" src="{{site.url}}/resources/js/github-example.js"></script>
-<!-- Third-Party JS -->
-<script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>
-<section class="main-inner hide" id="share-comment">
-    <br/>
-    <!-- JiaThis Button BEGIN -->
-    <div class="jiathis_style">
-        <span class="jiathis_txt">分享到：</span>
-        <a class="jiathis_button_weixin">微信</a>
-        <a class="jiathis_button_tsina">新浪微博</a>
-        <a class="jiathis_button_qzone">QQ空间</a>
-        <a class="jiathis_button_cqq">QQ好友</a>
-        <a class="jiathis_button_fav">收藏夹</a>
-        <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis"
-           target="_blank">更多</a>
-    </div>
-    <!-- JiaThis Button END -->
-    <br/>
-    <br/>
-
-    <div id="disqus_thread"></div>
-</section>
-
-<footer class="container">
-    <hr/>
-    <ul class="nav nav-pills">
-        <li role="presentation"><a href="/">{{ site.name }}</a></li>
-        <li role="presentation"><a href="/about">About</a></li>
-        <li role="presentation"><a href="/sitemap.xml">Sitemap</a></li>
-        <li role="presentation" class="pull-right">
-            <a href="javascript:$('body').animate({scrollTop: 0}, 200);">TOP</a>
-        </li>
-    </ul>
-    <!-- Google Analytics -->
-    <script>
-        $(function () {
-            var jiathis_config = {
-                summary: "",
-                shortUrl: false,
-                hideMore: false
-            }, disqus_config = function () {
-                this.page.url = location.href; // Replace PAGE_URL with your page's canonical URL variable
-                this.page.identifier = location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            var d = document, share = d.createElement('script'), dis = d.createElement('script');
-            // add jiathis
-            share.src = '//v3.jiathis.com/code/jia.js';
-            // add disqus
-            dis.src = '//tt-cc.disqus.com/embed.js';
-            dis.setAttribute('data-timestamp', new Date());
-            (d.head || d.body).appendChild(share).appendChild(dis);
-            $("#share-comment").show();
-            // add google-analytics
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-            ga('create', '{{site.google_tracking_id}}', 'auto');
-            ga('send', 'pageview');
-        });
-    </script>
-
-</footer>
+{% include footer.html %}
