--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,11 +1,35 @@
-<div class="comments">
+<section id="share-comment">
+    <br/>
+    <!-- JiaThis Button BEGIN -->
+    <div class="jiathis_style">
+        <span class="jiathis_txt">分享到：</span>
+        <a class="jiathis_button_weixin">微信</a>
+        <a class="jiathis_button_tsina">新浪微博</a>
+        <a class="jiathis_button_qzone">QQ空间</a>
+        <a class="jiathis_button_cqq">QQ好友</a>
+    </div>
+    <!-- JiaThis Button END -->
+    <br/>
+    <br/>
     <div id="disqus_thread"></div>
     <script>
-        (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = '//{{ site.disque }}/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
+        var jiathis_config = {
+            summary: "",
+            shortUrl: false,
+            hideMore: false
+        }, disqus_config = function () {
+            this.page.url = location.href; // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        $(function () {
+            var d = document, share = d.createElement('script'), dis = d.createElement('script');
+            // add jiathis
+            share.src = '//v3.jiathis.com/code/jia.js';
+            // add disqus
+            dis.src = '//tt-cc.disqus.com/embed.js';
+            dis.setAttribute('data-timestamp', new Date());
+            (d.head || d.body).appendChild(share).appendChild(dis);
+            $("#share-comment").show();
+        });
     </script>
-</div>
+</section>
