--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,39 +1,21 @@
 <footer class="container">
-    <hr/>
-    <ul class="nav nav-pills">
-        <li role="presentation"><a href="/">{{ site.name }}</a></li>
-        <li role="presentation"><a href="/about">About</a></li>
-        <li role="presentation"><a href="/sitemap.xml">Sitemap</a></li>
-        <li role="presentation" class="pull-right">
-            <a href="javascript:$('body').animate({scrollTop: 0}, 200);">TOP</a>
-        </li>
-    </ul>
-
-    <!-- Third-Party JS -->
-    <script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>
-
-    <!-- My JS -->
-    <script type="text/javascript" src="/assets/js/script.js"></script>
-
-    {% for javascript in page.javascript %}
-    <script src="/assets/js/{{javascript}}"></script>
-    {% endfor %}
-
-    <!-- Google Analytics -->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', '{{site.google_tracking_id}}', 'auto');
-        ga('send', 'pageview');
-    </script>
-
+    <div class="row">
+        <hr/>
+        <ul class="nav nav-pills">
+            <li role="presentation"><a href="/">{{ site.name }}</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
+            <li role="presentation"><a href="/sitemap.xml">Sitemap</a></li>
+            <li role="presentation" class="pull-right">
+                <a href="javascript:$('body').animate({scrollTop: 0}, 200);">TOP</a>
+            </li>
+        </ul>
+    </div>
 </footer>
+<!-- Third-Party JS -->
+<script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>
+<!-- My JS -->
+<script type="text/javascript" src="/assets/js/script.js"></script>
+{% for javascript in page.javascript %}
+<script src="/assets/js/{{javascript}}"></script>
+{% endfor %}
+{% include google-analytic.html %}
