--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -3,6 +3,12 @@ body {
     overflow-x: hidden;
 }
 
+header {
+    padding: 0;
+    font-family: inherit;
+    border-bottom: none;
+}
+
 .site-header {
     padding-top: 10px;
     width: 100%;
@@ -85,6 +91,8 @@ body {
 
 .panel .panel-top {
     padding-left: 15px;
+    font-size: 18px;
+    padding-top: 15px;
 }
 
 .jumbotron {
@@ -94,7 +102,7 @@ body {
 }
 
 .jumbotron a {
-    color: #fff;
+    color: wheat;
 }
 
 /* modify bootstrap default style end*/
