--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" title="{{ site.name }}" class="navbar-brand">
-                    <span><img src="/favicon.ico"></span>
-                    <h3 class="visible-md-inline visible-lg-inline">TT-CC</h3>
+                <a href="{{ site.url }}" title="{{ site.name }}" class="navbar-brand">
+                    <span class="visible-md-inline visible-lg-inline"><img alt="{{ site.name }}" src="/favicon.ico"></span>
+                    TT-CC
                 </a>
             </div>
             <div id="navbarCollapse" class="collapse navbar-collapse">
