update layout and style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <hr/>
         <ul class="nav nav-pills">
             <li role="presentation"><a href="/">{{ site.name }}</a></li>
-            <li role="presentation"><a href="/about">About</a></li>
+            <li role="presentation"><a href="/about">About Me</a></li>
             <li role="presentation"><a href="/sitemap.xml">Sitemap</a></li>
             <li role="presentation" class="pull-right">
                 <a href="javascript:$('body').animate({scrollTop: 0}, 200);">TOP</a>
@@ -11,11 +11,10 @@
         </ul>
     </div>
 </footer>
-<!-- Third-Party JS -->
+<script type="text/javascript" src="/components/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>
-<!-- My JS -->
 <script type="text/javascript" src="/assets/js/script.js"></script>
-{% for javascript in page.javascript %}
+{% for javascript in page.js %}
 <script src="/assets/js/{{javascript}}"></script>
 {% endfor %}
 {% include google-analytic.html %}
