--- a/_includes/github-head.html
+++ b/_includes/github-head.html
@@ -13,8 +13,6 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
           href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
-    <script type="text/javascript" src="/components/jquery/jquery.min.js"></script>
-
     <!-- Third-Party CSS -->
     <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
 
@@ -24,9 +22,11 @@
     <link rel="stylesheet" href="/assets/css/common.css">
 
     <!-- CSS set in page -->
-    {% for css in page.romotejs %}
+    {% for css in page.romotecss %}
     <link rel="stylesheet" href="{{site.url}}{{css}}">
     {% endfor %}
+
+    <script type="text/javascript" src="/components/jquery/jquery.min.js"></script>
 
     {% for javascript in page.romotejs %}
     <script src="{{site.url}}{{javascript}}"></script>
