--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -2,45 +2,29 @@
 {% if site.github && site.github.public_repositories %}
 {% assign sorted_repos = (site.github.public_repositories | sort: 'stargazers_count') | reverse | where: "fork", "false" %}
 {% for repo in sorted_repos | limit: site.side_bar_repo_limit %}
-<div class="card text-center">
-    <div class="thumbnail">
-        <div class="card-image geopattern" data-pattern-id="{{ repo.name }}">
-            <div class="card-image-cell">
-                <h3 class="card-title">
-                    <a href="{{ repo.html_url }}" target="_blank">{{ repo.name }}</a>
-                </h3>
-            </div>
+<div class="text-center">
+    <div class="thumbnail thumbnail-card">
+        <div class="caption geopattern" data-pattern-id="{{ repo.name }}">
+            <a href="{{ repo.html_url }}" target="_blank"><h3>{{ repo.name }}</h3></a>
         </div>
         <div class="caption">
-            <div class="card-description">
-                <p class="card-text">{{ repo.description }}</p>
-            </div>
-            <div class="card-text">
-                            <span data-toggle="tooltip" class="meta-info" title="{{ repo.stargazers_count }} stars">
+            <p>{{ repo.description }}</p>
+            <p>
+                            <span data-toggle="tooltip" title="{{ repo.stargazers_count }} stars">
                                 <span class="glyphicon glyphicon-star"></span> {{ repo.stargazers_count }}
                             </span>
-                            <span data-toggle="tooltip" class="meta-info" title="{{ repo.forks_count }} forks">
+                            <span data-toggle="tooltip" title="{{ repo.forks_count }} forks">
                                 <span class="glyphicon glyphicon-hand-right"></span> {{ repo.forks_count }}
                             </span>
-                            <span data-toggle="tooltip" class="meta-info" title="Last updated：{{ repo.updated_at }}">
+                            <span data-toggle="tooltip" title="Last updated：{{ repo.updated_at }}">
                                 <span class="glyphicon glyphicon-time"></span>
                                 <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at
                                     | date: '%Y-%m-%d' }}
                                 </time>
                             </span>
-            </div>
+            </p>
         </div>
     </div>
 </div>
 {% endfor %}
-<script>
-    $(document).ready(function () {
-
-        // Enable bootstrap tooltip
-        $("body").tooltip({selector: '[data-toggle=tooltip]'});
-        $('.geopattern').each(function () {
-            $(this).geopattern($(this).data('pattern-id'));
-        });
-    });
-</script>
 {% endif %}
