--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,11 +5,11 @@ menu: Blog
 <div class="col-md-8">
     <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
-        <li><a href="/tags">tags</a></li>
+        <li><a href="/categories">categories</a></li>
         <li class="active">{{ page.title }}</li>
     </ol>
-    {% if site.tags[page.slug] %}
-    {% for post in site.tags[page.slug] %}
+    {% if site.categories[page.slug] %}
+    {% for post in site.categories[page.slug] %}
     {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
     {% if forloop.first %}
     <h3>{{ post_year }}</h3>
@@ -18,7 +18,8 @@ menu: Blog
         {% endif %}
         {% unless forloop.first %}
         {% assign previous_index = forloop.index0 | minus: 1 %}
-        {% capture previous_post_year %}{{ site.tags[page.slug][previous_index].date | date: '%Y' }}{% endcapture %}
+        {% capture previous_post_year %}{{ site.categories[page.slug][previous_index].date | date: '%Y' }}{% endcapture
+        %}
         {% if post_year != previous_post_year %}
     </div>
     <h3>{{ post_year }}</h3>
@@ -38,9 +39,14 @@ menu: Blog
     {% endif %}
     {% endfor %}
     {% else %}
-    <p>There are no posts in this tag.</p>
+    <p>There are no posts in this category.</p>
     {% endif %}
 </div>
 <div class="col-md-4">
-    {% include sidebar-post-category.html %}
+    <div class="btn-label">
+        <h3> Categories Cloud</h3>
+        {% for category in site.my_categories %}
+        <a href="/category/{{category.slug}}" class="btn btn-default">{{ category.slug }}</a>
+        {% endfor %}
+    </div>
 </div>
