--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,15 +1,15 @@
 ---
 layout: page
-menu: Blog
+menu: Tags
 ---
 <div class="col-md-8">
     <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
-        <li><a href="/categories">categories</a></li>
+        <li><a href="/tags">tags</a></li>
         <li class="active">{{ page.title }}</li>
     </ol>
-    {% if site.categories[page.slug] %}
-    {% for post in site.categories[page.slug] %}
+    {% if site.tags[page.slug] %}
+    {% for post in site.tags[page.slug] %}
     {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
     {% if forloop.first %}
     <h3>{{ post_year }}</h3>
@@ -18,8 +18,7 @@ menu: Blog
         {% endif %}
         {% unless forloop.first %}
         {% assign previous_index = forloop.index0 | minus: 1 %}
-        {% capture previous_post_year %}{{ site.categories[page.slug][previous_index].date | date: '%Y' }}{% endcapture
-        %}
+        {% capture previous_post_year %}{{ site.tags[page.slug][previous_index].date | date: '%Y' }}{% endcapture %}
         {% if post_year != previous_post_year %}
     </div>
     <h3>{{ post_year }}</h3>
@@ -39,9 +38,15 @@ menu: Blog
     {% endif %}
     {% endfor %}
     {% else %}
-    <p>There are no posts in this category.</p>
+    <p>There are no posts in this tag.</p>
     {% endif %}
 </div>
 <div class="col-md-4">
-    {% include sidebar-post-tag.html %}
+    <div class="btn-label">
+        <h3> Tag Cloud</h3>
+        {% for tag in site.my_tags %}
+        {% assign words = ['JavaScript', 'CSS', 'HTML'] %}
+        <a href="/tag/{{tag.slug}}" class="btn btn-default">{{ tag.slug }}</a>
+        {% endfor %}
+    </div>
 </div>
